--- a/style.css
+++ b/style.css
@@ -9,14 +9,13 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .title {
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
-    margin-top: 20em;
 }
 
 h1 {
@@ -26,4 +25,13 @@ h1 {
 p {
     font-size: 1.2em;
     margin-bottom: 3em;
+}
+
+@media screen and (max-width: 425px) {
+    h1 {
+        font-size: 1.5em;
+    }
+    p {
+        font-size: 1em;
+    }
 }
